# c2rust_refractoring_tools

./: README.md  requirements.txt
binn/: libbinn.so.3.0
c_prog/binn/: compile_commands.json
c_prog/cflow/: compile_commands.json  config.h
c_prog/compton/: compile_commands.json
c_prog/cpio-2.14/: Makefile  Makefile.in  aclocal.m4  compile_commands.json  config.h  config.status  configure
c_prog/enscript-1.6.1/: FAQ.html  compile_commands.json  config.h  config.status  configure.in
c_prog/findutils-4.9.0/: Cargo.toml  Makefile  Makefile.in  aclocal.m4  compile_commands.json  config.h  config.h.in  config.status
c_prog/gawk-5.2.2/: Cargo.toml  Makefile  array.rs  awkgram.rs  builtin.rs  cint_array.rs  command.rs  compile_commands.json  config.h  debug.rs  eval.rs  ext.rs  field.rs  gawk  gawkapi.rs  gawkbug  gawkmisc.rs  int_array.rs  io.rs  main.rs  mpfr.rs  msg.rs  node.rs  profile.rs  re.rs  str_array.rs  (+2 more)
cflow/: Makefile  config.status
compton/: c2rust-lib.rs  compile_commands.json
hiredis/: alloc.rs  net.rs  read.rs  sds.rs
libtree/: compile_commands.json  libtree.rs
libzahl/: INSTALL  Makefile  STATUS  test-generate.py  zahl.h
minilisp/: compile_commands.json
project/: Unsafe_Rate.csv  collect_data.py  count_c_prog.py  data.csv  llm_refactoring.py  pre_process.py  refactoring.py  result.csv  test.py
project/rust_code_analyzer/: Cargo.toml  locations.json
project/rust_code_analyzer/src/: cast.rs  lib.rs  main.rs
project/rust_struct_processer/: Cargo.toml
project/rust_struct_processer/src/: main.rs
twemproxy/: compile_commands.json
(+14612 files in other folders)
