[package]
name = "rust_code_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"
#syn = {version = "2.0", features=["full", "extra-traits", "printing", "clone-impls", "visit"]}
#quote = "1.0"
proc-macro2 = {version = "1.0.78", features=["span-locations"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
