[package]
name = "rust_code_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2"
prettyplease = "0.2"

[[bin]]
name = "rust_code_analyzer"
path = "src/main.rs"
