[package]
name = "rust_struct_processer"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2", features = ["full", "visit-mut"] }
quote = "1.0"
prettyplease = "0.2"
clap = "2"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

[[bin]]
name = "rust_struct_processer"
path = "src/main.rs"